# Snake_sfml

./: CMakeLists.txt  Direction.h  Food.cpp  Food.h  Game.cpp  Game.h  Snake.cpp  Snake.h  SnakeSegment.cpp  SnakeSegment.h  main.cpp
